modularize containers and first pass rev pool page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,40 +31,87 @@
 h1 {
   font-size: 64px;
   font-weight: 500;
+  line-height: 83.2px;
 }
 h2 {
   font-size: 56px;
   font-weight: 500;
+  line-height: 72.8px;
 }
 h3 {
   font-size: 56px;
   font-weight: 300;
+  line-height: 72.8px;
 }
 h4 {
   font-size: 48px;
   font-weight: 500;
+  line-height: 62.4px;
 }
 .title24 {
   font-size: 24px;
   font-weight: 300;
+  line-height: 31.2px;
 }
 .title20 {
   font-size: 20px;
   font-weight: 400;
+  line-height: 26px;
 }
 .body20 {
   font-size: 20px;
   font-weight: 500;
+  line-height: 26px;
 }
 .body18 {
   font-size: 18px;
   font-weight: 400;
+  line-height: 23.4px;
 }
 .body16Medium {
   font-size: 16px;
   font-weight: 500;
+  line-height: 20.8px;
 }
 .body16Regular {
   font-size: 16px;
   font-weight: 400;
+  line-height: 20.8px;
+}
+
+.contentContainerWithSidebar {
+  @apply rounded-lg bg-slate-light flex flex-col xl:flex-row justify-around gap-8 max-w-6xl;
+}
+.contentContainerWithoutSidebar {
+  @apply rounded-lg bg-slate-light flex flex-col lg:flex-row justify-around gap-8 max-w-6xl;
+}
+
+.contentContainerColumnWithSidebar {
+  @apply flex flex-col mx-4 my-4 xl:my-16;
+}
+.contentContainerColumnWithoutSidebar {
+  @apply flex flex-col mx-4 my-4 lg:my-16;
+}
+
+/* after 3 initial seconds, the toggle sidebar button will shake a couple times (which will take up 2.5 seconds), 
+then will rest for 7.5 seconds, then repeat  */
+.shake {
+  animation: shake 10s ease-in-out infinite;
+  animation-delay: 3s;
+}
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  5%,
+  15% {
+    transform: translateX(-3px);
+  }
+  10%,
+  20% {
+    transform: translateX(3px);
+  }
+  25% {
+    transform: translateX(0);
+  }
 }
