--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -115,3 +115,14 @@ then will rest for 7.5 seconds, then repeat  */
     transform: translateX(0);
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
