add class for small sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,9 @@
   .sidebarActive {
     @apply ml-[324px] transition-all duration-300;
   }
+  .sidebarSmall {
+    @apply ml-[80px] transition-all duration-300;
+  }
 }
 
 .contentContainerWithSidebar {
