--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,6 +72,7 @@
 .addressGrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  /* grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); */
   grid-gap: 1rem;
 }
 
