--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,10 +70,17 @@
 }
 
 .addressGrid {
+  height: 100%;
+  overflow-y: scroll;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  /* grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); */
-  grid-gap: 1rem;
+  grid-template-rows: 350px; /* Fixed height for the row */
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Dynamic columns */
+  gap: 10px; /* Adjust the gap between columns */
+
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  /* grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-gap: 1rem; */
 }
 
 .backdrop {
@@ -87,6 +94,7 @@
   align-items: center;
   justify-content: center;
   overflow-y: hidden;
+  z-index: 10;
 }
 
 h1 {
@@ -170,6 +178,86 @@ then will rest for 7.5 seconds, then repeat  */
   }
   25% {
     transform: translateX(0);
+  }
+}
+
+/* arrow code by https://codepen.io/chappie */
+.arrow {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  /*   border:solid 1px white; */
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+.arrow {
+  /*  animation:borderAni 5s cubic-bezier(0, 0.6, 1, 0.4); */
+  border: solid 2px white;
+  border-radius: 50%;
+}
+.arrow:after {
+  position: absolute;
+  display: block;
+  content: '';
+  color: white;
+  width: 20px;
+  height: 15px;
+  /*   border:solid 1px;  */
+  top: -1px;
+  border-bottom: solid 2px;
+  transform: translatex(4px);
+}
+
+.arrow:before {
+  position: absolute;
+  display: block;
+  content: '';
+  color: white;
+  width: 8px;
+  height: 8px;
+  /*   border:solid 1px;  */
+  border-top: solid 2px;
+  border-left: solid 2px;
+  top: 50%;
+  left: 2px;
+  transform-origin: 0% 0%;
+  transform: rotatez(-45deg);
+}
+.arrow:before {
+  animation: aniArrow01 1s cubic-bezier(0, 0.6, 1, 0.4) infinite 0.5s;
+}
+
+.arrow:after {
+  animation: aniArrow02 1s cubic-bezier(0, 0.6, 1, 0.4) infinite 0.5s;
+}
+
+@keyframes aniArrow01 {
+  0% {
+    transform: rotatez(-45deg) translateY(30px) translateX(30px);
+  }
+  100% {
+    transform: rotatez(-45deg) translateY(-35px) translateX(-35px);
+  }
+}
+
+@keyframes aniArrow02 {
+  0% {
+    transform: translateX(45px);
+  }
+  100% {
+    transform: translateX(-44px);
+  }
+}
+
+@keyframes borderAni {
+  0% {
+    border: solid 2px white;
+  }
+  100% {
+    border: solid 2px white;
+    border-radius: 50%;
   }
 }
 
