--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -319,20 +319,21 @@
 /*  ------------------------------------------------- */
 /* Firefox */
 * {
-  scrollbar-width: thin; /* "auto" or "thin" */
-  scrollbar-color: #f3f4f6; /* scroll thumb and track */
+  scrollbar-width: none; /* "auto" or "thin" */
+  /* scrollbar-color: #f3f4f6; scroll thumb and track */
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 0.6em;
+  /* width: 0.6em; */
+  width: 0%;
 }
 
 *::-webkit-scrollbar-track {
-  @apply bg-transparent;
+  @apply hidden;
 }
 *::-webkit-scrollbar-thumb {
-  @apply bg-black rounded-lg cursor-pointer border-solid border-2 border-white;
+  /* @apply bg-transparent rounded-lg cursor-pointer border-solid border-0 border-white; */
 }
 
 /* Modal Scrollbars */
